# zampolit

./: LICENSE  README  Zampolit.hs  dot.namefold  stack.yaml  zampolit.cabal
sample/: promises-wc.data  promises-wc.gnuplot
