Name:                zampolit
Version:             0.1
Synopsis:            A tool for checking how much work is done on group projects.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Brian Sniffen
Maintainer:          bts@alum.mit.edu
Homepage:            https://github.com/briansniffen/zampolit
Copyright:           Copyright (c) 2011 Brian Sniffen
Category:            Text
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2


Executable zampolit
  -- .hs or .lhs file containing the Main module.
  Main-is:             Zampolit.hs
  
  -- Packages needed in order to build this package.
  Build-depends:       base,parsec,cmdargs,time,containers,old-locale,directory,filepath,HSH
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
